@@ -20,6 +20,9 @@
 * Update SetBuildFlags() for better support of gcc-extra.
 * Provide different cmake toolchain files for different GCC versions:
   ${SYSROOT}/usr/share/cmake/${SYSTEM}.gcc-${GCC_CURRENT_VER}.conf.cmake
+* Add special special scripts with specified paths to toolchain files:
+  ${PREFIX}/bin/${TARGET}-gcc-${GCC_CURRENT_VER}-cmake
+
 
 --- v1.2 (2015-07-11) ---
 * Rewrite IsVer1GreaterOrEqualToVer2() function without using of dpkg
